cleaned up code

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
             </nav>
         </header>
 
-        <section class="spacing">
+        <div class="spacing">
             <div class="parent-flex nav-bar">
                 <div class="flex-item-left">
                     <div class="section-header-1">Huarui Lai</div>
@@ -58,12 +58,12 @@
                      Welcome to my design portfolio.</div>
                 </div>
                 <div class="flex-item-right">
-                    <image class="cap" src="assets/croc-goose.GIF" />
+                    <img class="cap" alt="crocodile and goose animation" src="assets/croc-goose.GIF" />
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <div> 
                 <div class="intro">
                         <div class="section-header">Project Highlights</div>
@@ -75,7 +75,7 @@
                             <a href="projects/google.html">
                                 <img class="cap" alt="google-ads" src="assets/google.png" />
                                 <div class = "overlay blur">
-                                    <div class="proj-desc">
+                                    <div class="long-1">
                                     A 12-week exploration as a STEP intern into front-end 
                                     web development for Google Ads in Mountain View, CA. 
                                     </div>
@@ -87,7 +87,7 @@
                             <a href="projects/jamjelly.html">
                                 <img class="cap" alt="spotify-img" src="assets/spotify.png" />
                                 <div class = "overlay blur" id="jamjelly">
-                                    <div class="proj-desc">
+                                    <div class="long-1">
                                     A Spotify playlist generator that creates an editable playlist of varying size for users based on their favorite artist, genre, and current mood.
                                     </div>
                                 </div>
@@ -98,7 +98,7 @@
                             <a href="projects/pamela.html">
                                 <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">
-                                    <div class="proj-desc">
+                                    <div class="long-1">
                                     A case study done to improve the user interface, accessibility, and look
                                     of the website for a local restaurant: Pamela's Diner.
                                     </div>
@@ -110,12 +110,12 @@
                             <a href="projects/gaugeme.html">
                                 <img class="cap" alt="google-ads" src="assets/gauge.png" />
                                 <div class = "overlay blur">
-                                    <div class="proj-desc">
+                                    <div class="long-1">
                                         Gauge Me, a proposed Slack add-on that improves employee wellbeing and mental health while working from home.
                                     </div>
                                 </div>
                             </a>
-                            <div class="small-text no-blur">Gauge Me</div>
+                            <div class="title-text no-blur">Gauge Me</div>
                         </div>
                         <div class="proj" id = "proj5"> 
                             <a href="projects/internet.html">
@@ -135,7 +135,7 @@
                             <a href="projects/infosystems.html">
                                 <img class="cap" alt="IS-img" src="assets/IS.png" />
                                 <div class = "overlay blur">
-                                    <div class="proj-desc">
+                                    <div class="long-1">
                                         Various posters and graphic I've designed as an office assistant for the Information Systems Office at Carnegie Mellon University.
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                 <div class="footer">
                     <div class="container">
                         <div class="services-list-1">
-                            <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                            <a class="contact" href="mailto:huarui.lai@gmail.com" target="_blank">
                                 <img class="icon" alt="mail-icon" src="assets/plane.png" />
                                 <div class="small-text">
                                     <div class="username">huarui.lai@gmail.com</div>
@@ -178,6 +178,6 @@
                 </div>
 
             </div>
-        </section>
+        </div>
     </body>
 </html>
