--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -35,7 +35,7 @@
             </nav>
         </header>
 
-        <section>
+        <div>
             <div class = "subhead">
                  <div class = "proj-title">
                      Gauge Me.
@@ -51,10 +51,10 @@
                      </div>
                  </div>
             </div>
-         </section>
+         </div>
          <div class="body-text-big"> 
             <div class="video-embed">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxRmU7IHI8UQhTyx5CT3V3uXEWeboC-blk1VGES1yfHz_teyRaUF9T8gnKhF5L0EPPciqeFUy-uB38/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxRmU7IHI8UQhTyx5CT3V3uXEWeboC-blk1VGES1yfHz_teyRaUF9T8gnKhF5L0EPPciqeFUy-uB38/embed?start=false&loop=true&delayms=3000" width="480" height="299"></iframe>
             </div>
         </div>
         
@@ -72,7 +72,7 @@
                     <div class="subheading">Timeline</div>
             </div>
 
-            <section class="description">
+            <div class="description">
                 <div class="table">
                     <div class="col descriptions pad">
                        <div class="bold">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
               
-            </section>
+            </div>
         </div>
 
         <div class="body-text"> 
@@ -162,7 +162,7 @@
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
-                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                    <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
