--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -37,7 +37,7 @@
             </nav>
         </header>
 
-        <section>
+        <div>
            <div class = "subhead">
                 <div class = "proj-title">
                     Google.
@@ -53,7 +53,7 @@
                     </div>
                 </div>
            </div>
-        </section>
+        </div>
 
         <div class="body-text"> 
             <div class="img-sections">
@@ -146,7 +146,7 @@
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
-                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                    <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
