--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -35,7 +35,6 @@
             </nav>
         </header>
 
-        <section>
             <div class = "subhead">
                  <div class = "proj-title">
                      Jam & Jelly.
@@ -51,7 +50,6 @@
                      </div>
                  </div>
             </div>
-         </section>
 
          <div class="body-text-big"> 
             <div class="video-container">
@@ -82,7 +80,7 @@
                     <div class="subheading">Timeline</div>
             </div>
 
-            <section class="description">
+            <div class="description">
                 <div class="table">
                     <div class="col descriptions pad">
                        <div class="bold">
@@ -110,7 +108,7 @@
                     </div>
                 </div>
               
-            </section>
+            </div>
         </div>
 
         <div class="body-text"> 
@@ -178,7 +176,7 @@
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
-                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                    <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
