--- a/portfolio/about/about.html
+++ b/portfolio/about/about.html
@@ -36,7 +36,7 @@
             </nav>
         </header>
 
-        <section>
+        <div>
             <div class = "subhead">
                  <div class = "proj-title">
                      Huarui Lai.
@@ -52,7 +52,7 @@
                      </div>
                  </div>
             </div>
-        </section>
+        </div>
 
         <div class="body-text">
 
@@ -69,7 +69,7 @@
 
                 <div class="collage-right">
                     <div class="abt-desc ">
-                        Hi, nice to meet you! :) My name is Huarui Lai and I'm a thoughtful, creative, and adventurous sophomore studying Information Systems and Human-Computer Interaction at Carnegie Mellon University.
+                        Hi, it's nice to meet you! :) My name is Huarui Lai and I'm a thoughtful, creative, and adventurous sophomore studying Information Systems and Human-Computer Interaction at Carnegie Mellon University.
                     </div>
                 </div>
                 
