--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -35,7 +35,7 @@
             </nav>
         </header>
 
-        <section>
+        <div>
             <div class = "subhead">
                  <div class = "proj-title">
                      The Data Age.
@@ -51,7 +51,7 @@
                      </div>
                  </div>
             </div>
-         </section>
+         </div>
 
          <div class="body-text"> 
             <div class="intros">
@@ -209,7 +209,7 @@ thoughts/concerns/comments
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
-                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                    <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
