updated index.html alt tags

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="index.html">
-                    <img class="huarui-logo" alt="personal-logo" src="assets/H..png" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="assets/H..png" />
                 </a>
             </h1>
             <nav>
@@ -58,7 +58,7 @@
                      Welcome to my design portfolio.</div>
                 </div>
                 <div class="flex-item-right">
-                    <img class="cap" alt="crocodile and goose animation" src="assets/croc-goose.GIF" />
+                    <img class="cap" alt="a crocodile and goose animation" src="assets/croc-goose.GIF" />
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
                             <a href="projects/google.html">
-                                <img class="cap" alt="google-ads" src="assets/google.png" />
+                                <img class="cap" alt="graphic with the text Google Ads" src="assets/google.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                     A 12-week exploration as a STEP intern into front-end 
@@ -85,7 +85,7 @@
                         </div>
                         <div class="proj" id = "proj2"> 
                             <a href="projects/jamjelly.html">
-                                <img class="cap" alt="spotify-img" src="assets/spotify.png" />
+                                <img class="cap" alt="Spotify graphic" src="assets/spotify.png" />
                                 <div class = "overlay blur" id="jamjelly">
                                     <div class="long-1">
                                     A Spotify playlist generator that creates an editable playlist of varying size for users based on their favorite artist, genre, and current mood.
@@ -96,7 +96,7 @@
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/pamela.html">
-                                <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
+                                <img class="cap" alt="Pamela's Diner graphic" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                     A case study done to improve the user interface, accessibility, and look
@@ -108,7 +108,7 @@
                         </div>
                         <div class="proj" id = "proj4"> 
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="google-ads" src="assets/gauge.png" />
+                                <img class="cap" alt="Gauge Me graphic" src="assets/gauge.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                         Gauge Me, a proposed Slack add-on that improves employee wellbeing and mental health while working from home.
@@ -119,7 +119,7 @@
                         </div>
                         <div class="proj" id = "proj5"> 
                             <a href="projects/internet.html">
-                                <img class="cap" alt="spotify-img" src="assets/data1.PNG" />
+                                <img class="cap" alt="The Data Age graphic" src="assets/data1.PNG" />
                                 <div class = "overlay blur">
                                     <div class="long">
                                         "What is IS? Why should people care?" This project integrates design principles such as color theory, typography, and contrast to create an effective visual experience. 
@@ -133,7 +133,7 @@
                         </div>
                         <div class="proj" id = "proj6" >
                             <a href="projects/infosystems.html">
-                                <img class="cap" alt="IS-img" src="assets/IS.png" />
+                                <img class="cap" alt="graphic for the IS Office at CMU" src="assets/IS.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                         Various posters and graphic I've designed as an office assistant for the Information Systems Office at Carnegie Mellon University.
@@ -149,34 +149,33 @@
                     <div class="container">
                         <div class="services-list-1">
                             <a class="contact" href="mailto:huarui.lai@gmail.com" target="_blank">
-                                <img class="icon" alt="mail-icon" src="assets/plane.png" />
+                                <img class="icon" alt="mail icon" src="assets/plane.png" />
                                 <div class="small-text">
                                     <div class="username">huarui.lai@gmail.com</div>
                                 </div>
                             </a>
                             <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                                <img class="icon" alt="github-icon" src="assets/github.png" />
+                                <img class="icon" alt="github icon" src="assets/github.png" />
                                 <div class="small-text">
                                     <div class="username">hlai1</div>
                                 </div>
                             </a>
                             <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                                <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
+                                <img class="icon" alt="linkedin icon" src="assets/linkedin.png" />
                                 <div class="small-text">
                                     <div class="username">Huarui Lai</div>
                                 </div>
                             </a>
                         </div>
                         <div class="contact center">
-                            <img class="icon" alt="star-icon" src="assets/star.png" />
+                            <img class="icon" alt="star icon" src="assets/star.png" />
                             <div class="small-text">   
                                 <div class="username-1">made by Huarui Lai</div>
                             </div>
-                            <img class="icon" alt="star-icon" src="assets/star.png" />
+                            <img class="icon" alt="star icon" src="assets/star.png" />
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </body>
