updating alt tags

--- a/portfolio/about/about.html
+++ b/portfolio/about/about.html
@@ -17,7 +17,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal-logo" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
                 </a>
             </h1>
             <nav>
