--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -16,7 +16,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal-logo" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
                 </a>
             </h1>
             <nav>
@@ -42,11 +42,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                          <div class="date">April - May 2022</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group of people icon" src="../assets/group.png" />
                          <div class="date">Product Pitch for 67-250</div>
                      </div>
                  </div>
@@ -143,53 +143,50 @@
                 <div class="contact center">
                     <a href = "pamela.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "internet.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
             </div>
         </div>
 
-
-
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
-                    <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                    <a class="contact" href="mailto:huarui.lai@gmail.com" target="_blank">
+                        <img class="icon" alt="mail icon" src="assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="assets/star.png" />
                 </div>
             </div>
         </div>
-
     </body>
 </html>
