--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -16,7 +16,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal-logo" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
                 </a>
             </h1>
             <nav>
@@ -42,11 +42,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                          <div class="date">Sept 2022 - Present</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group icon" src="../assets/group.png" />
                          <div class="date">Graphic Design</div>
                      </div>
                  </div>
@@ -55,17 +55,17 @@
 
          <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/electives.png" />
-                <img class="imgs" alt="yosemite" src="../assets/transfer.png" /> 
+                <img class="imgs" alt="poster with information systems electives" src="../assets/electives.png" />
+                <img class="imgs" alt="poster about information systems" src="../assets/transfer.png" /> 
             </div>
       
             <div class="img-sections">
-                <img class="imgs" alt="point-lobos" src="../assets/business-1.png" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/business-2.png" /> 
+                <img class="imgs" alt="business card about information systems front side" src="../assets/business-1.png" /> 
+                <img class="imgs" alt="business card about information systems back side" src="../assets/business-2.png" /> 
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="point-lobos" src="../assets/business-3.png" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/business-4.png" /> 
+                <img class="imgs" alt="customizable business card front side" src="../assets/business-3.png" /> 
+                <img class="imgs" alt="customizable business card back side" src="../assets/business-4.png" /> 
             </div>
             <div class="intros">
                 <div class="subheading">Posters and Business Cards</div>
@@ -85,14 +85,14 @@
                 <div class="contact center">
                     <a href = "internet.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "google.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -103,30 +103,30 @@
             <div class="container">
                 <div class="services-list-1">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="../assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="../assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                 </div>
             </div>
         </div>
