--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -18,7 +18,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal-logo" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
                 </a>
             </h1>
             <nav>
@@ -44,11 +44,11 @@
                 </div>
                 <div class="desc-parent">
                     <div class="desc">
-                        <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                        <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                         <div class="date">May - Aug 2022</div>
                     </div>
                     <div class="desc">
-                        <img class="icon" alt="group-icon" src="../assets/group.png" />
+                        <img class="icon" alt="group icon" src="../assets/group.png" />
                         <div class="date">STEP Intern</div>
                     </div>
                 </div>
@@ -57,9 +57,9 @@
 
         <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs small-img" id = "img1" alt="japanese-garden" src="../assets/google-oregon.jpg" />
-                <img class="imgs small-img" id = "img2" alt="yosemite" src="../assets/yosemite.jpg" />
-                <img class="imgs small-img" id = "img3" alt="point-lobos" src="../assets/yt.jpg" /> 
+                <img class="imgs small-img" id = "img1" alt="a sign for Oregon at Google" src="../assets/google-oregon.jpg" />
+                <img class="imgs small-img" id = "img2" alt="me jumping at Yosemite" src="../assets/yosemite.jpg" />
+                <img class="imgs small-img" id = "img3" alt="picture of an iridescent YouTube sign" src="../assets/yt.jpg" /> 
             </div>
         </div>
 
@@ -110,9 +110,9 @@
 
             <div class="body-text"> 
                 <div class="img-sections">
-                    <img class="imgs" id = "img4" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
-                    <img class="imgs" id = "img5" alt="yosemite" src="../assets/volleyball.jpg" />
-                    <img class="imgs" id = "img6" alt="point-lobos" src="../assets/point-lobo.jpg" />  
+                    <img class="imgs" id = "img4" alt="Japanese garden group photo" src="../assets/japanese-garden.jpg" />
+                    <img class="imgs" id = "img5" alt="beach volleyball group photo" src="../assets/volleyball.jpg" />
+                    <img class="imgs" id = "img6" alt="Point Lobos beach picture" src="../assets/point-lobo.jpg" />  
                 </div>
             </div>
 
@@ -129,14 +129,14 @@
                 <div class="contact center">
                     <a href = "infosystems.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "jamjelly.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -147,33 +147,32 @@
             <div class="container">
                 <div class="services-list-1">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="../assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="../assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                 </div>
             </div>
         </div>
-
     </body>
 </html>
