--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,6 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'G-QDQNC04DLX');
         </script>
         
@@ -81,7 +80,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <div class="small-text no-blur">Google: STEP Internship</div>
+                            <div class="title-text no-blur">Google: STEP Internship</div>
                         </div>
                         <div class="proj" id = "proj2"> 
                             <a href="projects/jamjelly.html">
