--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -18,7 +18,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H..png" />
                 </a>
             </h1>
             <nav>
